--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/manatee-matinee/piddle#readme",
   "devDependencies": {
+    "chai": "^3.5.0",
     "eslint": "^3.8.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.4.1"
+    "eslint-plugin-react": "^6.4.1",
+    "mocha": "^3.1.2"
   },
   "eslintConfig": {
     "extends": "airbnb",
@@ -36,6 +38,10 @@
     ]
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "morgan": "^1.7.0",
+    "passport-venmo": "0.0.1",
     "sequelize": "^3.24.4",
     "sqlite3": "^3.1.6"
   }
