--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.4.1",
-    "mocha": "^3.1.2"
+    "mocha": "^3.1.2",
+    "supertest": "^2.0.1"
   },
   "eslintConfig": {
     "extends": "airbnb",
@@ -40,6 +41,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "hashids": "^1.1.1",
     "morgan": "^1.7.0",
     "passport-venmo": "0.0.1",
     "sequelize": "^3.24.4",
