--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,10 @@
     "react-scripts": "0.6.1"
   },
   "dependencies": {
+    "chai": "^3.5.0",
+    "enzyme": "^2.5.1",
     "react": "^15.3.2",
+    "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1"
   },
