--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "homepage": "https://github.com/manatee-matinee/piddle#readme",
   "devDependencies": {
     "chai": "^3.5.0",
+    "cors": "^2.8.1",
     "eslint": "^3.8.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.4.1",
     "mocha": "^3.1.2",
+    "nodemon": "^1.11.0",
     "supertest": "^2.0.1"
   },
   "eslintConfig": {
