--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "hashids": "^1.1.1",
+    "jwt-simple": "^0.5.0",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
+    "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0",
     "sequelize": "^3.24.4",
     "sqlite3": "^3.1.6"
