--- a/package.json
+++ b/package.json
@@ -33,9 +33,7 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.4.1",
     "jsdoc": "^3.4.2",
-    "mocha": "^3.1.2",
-    "nodemon": "^1.11.0",
-    "supertest": "^2.0.1"
+    "nodemon": "^1.11.0"
   },
   "eslintConfig": {
     "extends": "airbnb",
@@ -55,11 +53,13 @@
     "express-session": "^1.14.1",
     "hashids": "^1.1.1",
     "jwt-simple": "^0.5.0",
+    "mocha": "^3.1.2",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0",
     "sequelize": "^3.24.4",
-    "sqlite3": "^3.1.6"
+    "sqlite3": "^3.1.6",
+    "supertest": "^2.0.1"
   }
 }
