--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Bill splitting through OCR and Venmo.",
   "main": "server.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha server/spec",
-    "start": "NODE_ENV=dev nodemon server/server.js",
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha server/spec",
+    "start": "NODE_ENV=dev ./node_modules/.bin/nodemon server/server.js",
     "doc": "./node_modules/.bin/apidoc -i server/routes -o docs/api & ./node_modules/.bin/jsdoc -c ./jsdocsConfig.json"
   },
   "apidoc": {
@@ -25,15 +25,12 @@
   "homepage": "https://github.com/manatee-matinee/piddle#readme",
   "devDependencies": {
     "apidoc": "^0.16.1",
-    "chai": "^3.5.0",
-    "cors": "^2.8.1",
     "eslint": "^3.8.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.4.1",
-    "jsdoc": "^3.4.2",
-    "nodemon": "^1.11.0"
+    "jsdoc": "^3.4.2"
   },
   "eslintConfig": {
     "extends": "airbnb",
@@ -48,6 +45,8 @@
   },
   "dependencies": {
     "bcrypt-as-promised": "^1.1.0",
+    "chai": "^3.5.0",
+    "cors": "^2.8.1",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
@@ -55,6 +54,7 @@
     "jwt-simple": "^0.5.0",
     "mocha": "^3.1.2",
     "morgan": "^1.7.0",
+    "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0",
