--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "enzyme": "^2.5.1",
     "jsonwebtoken": "^7.1.9",
     "jwt-decode": "^2.1.0",
+    "mathjs": "^3.6.0",
     "react": "^15.3.2",
     "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.3.2",
