--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "chai": "^3.5.0",
     "enzyme": "^2.5.1",
+    "jwt-decode": "^2.1.0",
+    "mathjs": "^3.6.0",
     "react": "^15.3.2",
     "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.3.2",
