--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react": "^15.3.2",
     "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-router": "^2.8.1"
+    "react-router": "^2.8.1",
+    "sinon": "^1.17.6"
   },
   "scripts": {
     "start": "react-scripts start",
