--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,14 @@
     "react-scripts": "0.6.1"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "chai": "^3.5.0",
     "enzyme": "^2.5.1",
     "jwt-decode": "^2.1.0",
     "mathjs": "^3.6.0",
     "react": "^15.3.2",
     "react-addons-test-utils": "^15.3.2",
+    "react-bootstrap": "^0.30.6",
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1"
   },
