--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "google-cloud": "^0.43.0",
     "hashids": "^1.1.1",
     "jwt-simple": "^0.5.0",
     "mocha": "^3.1.2",
     "morgan": "^1.7.0",
+    "multer": "^1.2.0",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.1.0",
