--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "chai": "^3.5.0",
+    "clipboard-js": "^0.3.1",
     "enzyme": "^2.5.1",
     "jwt-decode": "^2.1.0",
     "mathjs": "^3.6.0",
